[package]
name = "d12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"
indicatif = {version = "0.17.7", features = ["rayon"]}

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
